--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <script src="script.js" type="module" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
-  <body style="background: linear-gradient(135deg, #ff5db1 60%, #ef017c 73%)">
+  <body>
     <div class="container-fluid">
       <div class="container m-auto">
         <div class="row">
-          <h3 class="text-center mt-3">HacktoberFest Survey Form</h3>
+          <h3 class="text-center mt-3">HACKTOBERFEST-2023</h3>
           <div class="offset-sm-3 col-sm-6 offset-sm-3">
             <!-- Form start here -->
 
