--- a/Home.html
+++ b/Home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="" />
     <link rel="stylesheet" href="bootstrap.css" />
     <link rel="stylesheet" href="Home.css" />
-    <script src="script.js" type="module" defer></script>
+    <script src="Home.js" type="module" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
